--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
+    <meta
+      property="og:title"
+      content="Roe'e Chaimowicz - Front-End Developer"
+    />
+    <meta
+      property="og:image"
+      content="https://firebasestorage.googleapis.com/v0/b/roe-e-chaimowicz.appspot.com/o/Screenshot%202024-03-05%20at%2016.09.24.png?alt=media&token=d2b9f4e8-3fd1-459b-a967-e3d812e74223"
+    />
     <title>Roe'e Chaimowicz - Front-End Developer</title>
   </head>
   <body>
