--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     />
     <meta
       property="og:title"
-      content="Roe'e Chaimowicz - Front-End Developer"
+      content="Roe'e Chaimowicz - Software Developer"
     />
     <meta
       property="og:image"
